# jumpy_frog

./: Cargo.toml
.github/workflows/: release.yaml
assets/frogs/: basic.assets.ron
assets_raw/: tree_stump.bbmodel
src/: controls.rs  gameplay.rs  main.rs
src/gameplay/: physics.rs
wasm/: index.html
