[package]
name = "jumpy_frog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier2d = { version = "0.21.0", features = ["parallel", "serde-serialize", "enhanced-determinism", "wasm-bindgen"] }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }

[profile.dev.package.bevy_rapier2d]
opt-level = 3