[package]
name = "jumpy_frog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
leafwing-input-manager = "0.10"

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_rapier2d = { version = "0.22.0", features = ["serde-serialize", "enhanced-determinism", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier2d = { version = "0.22.0", features = ["parallel", "serde-serialize", "enhanced-determinism", "wasm-bindgen"] }